added some options on website

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -64,6 +64,39 @@
         <button id="form-submit" class="text-black bg-white rounded font-bold px-4 py-2 hover:bg-gray-300 transition duration-200 hover:scale-[102%]">Submit</button>
         </form>
       </div>
+
+      <div class="flex flex-col gap-8 items-start bg-zinc-950 border border-zinc-700 px-16 py-8 rounded w-[90%]">
+        <div class="text-white text-2xl font-bold">Ways to Make Profit</div>
+        <div class="flex flex-row flex-wrap gap-4 w-[100%]">
+          <a class='w-[45%] rounded bg-zinc-900 border border-zinc-700 px-8 py-4' href="/accounts">
+            <div class="flex flex-col items-start gap-4">
+              <div class="text-white text-lg font-bold">Sign Up Offers</div>
+              <div class="text-white opacity-80">Create accounts and make deposits following the instructions given.</div>
+              <div class="text-white opacity-80">This provides a fixed a profit - the more new accounts you can make with us the more money you make. (If you already have a lot of betting accounts then your profits will be considerably less).</div>
+              <div class="text-black font-bold px-4 py-2 bg-green-400 rounded">Estimated Profit: £100 - £150</div>
+              <div class="text-black font-bold px-4 py-2 bg-orange-400 rounded flex flex-row gap-4 items-center"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-timer"><line x1="10" x2="14" y1="2" y2="2"/><line x1="12" x2="15" y1="14" y2="11"/><circle cx="12" cy="14" r="8"/></svg> Average 1-2 Week Completion Time</div>
+            </div>
+          </a>
+          <a class='w-[45%] rounded bg-zinc-900 border border-zinc-700 px-8 py-4' href="/betting">
+            <div class="flex flex-col items-start gap-4">
+              <div class="text-white text-lg font-bold">Value Betting</div>
+              <div class="text-white opacity-80">This is our easiest option - simply give us the accounts listed, and then we'll do the rest.</div>
+              <div class="text-white opacity-80">Although the potential profits are a lot higher, for reasons out of our control accounts may be randomly limited early on, resulting in lower profits - however this happens rarely.</div>
+              <div class="text-white opacity-80 font-bold">Please note if you want to profit off both the sign up offers and value betting you must make the accounts through the sign up offers section before we start the value betting process.</div>
+              <div class="text-black font-bold px-4 py-2 bg-green-400 rounded">Estimated Profit: £250 - £400</div>
+              <div class="text-black font-bold px-4 py-2 bg-orange-400 rounded flex flex-row gap-4 items-center"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-timer"><line x1="10" x2="14" y1="2" y2="2"/><line x1="12" x2="15" y1="14" y2="11"/><circle cx="12" cy="14" r="8"/></svg> Average 1-2 Month Completion Time</div>
+            </div>
+          </a>
+          <a class='w-[45%] rounded bg-zinc-900 border border-zinc-700 px-8 py-4' href="/affiliate">
+            <div class="flex flex-col items-start gap-4">
+              <div class="text-white text-lg font-bold">Affilaite System</div>
+              <div class="text-white opacity-80">Simply give out your affiliate code to whoever you want to sign up to our website and you will be credited £40 through bank transfer once they meet the minimum activity threshold.</div>
+              <div class="text-black font-bold px-4 py-2 bg-green-400 rounded">Estimated Profit: £80 - £160 (Depends on how many signups)</div>
+              <div class="text-black font-bold px-4 py-2 bg-orange-400 rounded flex flex-row gap-4 items-center"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-timer"><line x1="10" x2="14" y1="2" y2="2"/><line x1="12" x2="15" y1="14" y2="11"/><circle cx="12" cy="14" r="8"/></svg> Credited Instantly</div>
+            </div>
+          </a>
+        </div>
+      </div>
     </div>
     
   
